--- a/Confusion_Matrix0.ipynb
+++ b/Confusion_Matrix0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxKFjiRD0BNP56XhmQ/MXo",
+      "authorship_tag": "ABX9TyMvR3WyC4c9nlfbUUSqBBmk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,9 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from sklearn.model_selection import train_test_split\n"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn import preprocessing\n",
+        "from sklearn.preprocessing\n"
       ]
     }
   ]
