--- a/Confusion_Matrix0.ipynb
+++ b/Confusion_Matrix0.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvR3WyC4c9nlfbUUSqBBmk",
+      "mount_file_id": "16GWNJ6FGtihFoKfHUwASSIEnPoaei9lo",
+      "authorship_tag": "ABX9TyOOJUwqtyldZXlVTkntva+3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +29,372 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "VU9E1HaatKr2"
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import preprocessing\n",
-        "from sklearn.preprocessing\n"
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.metrics import precision_score, recall_score, confusion_matrix, classification_report, accuracy_score, f1_score\n",
+        "from sklearn import metrics\n",
+        "from sklearn.metrics import roc_curve, auc, roc_auc_score\n",
+        "np.random.seed(0)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv(\"/fetal_health.csv\")\n",
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "yUDpOW1ug9gA",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 251
+        },
+        "outputId": "bca3a8de-3064-4130-8db9-3ebcb33c4d25"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   baseline value  accelerations  fetal_movement  uterine_contractions  \\\n",
+              "0           120.0          0.000             0.0                 0.000   \n",
+              "1           132.0          0.006             0.0                 0.006   \n",
+              "2           133.0          0.003             0.0                 0.008   \n",
+              "3           134.0          0.003             0.0                 0.008   \n",
+              "4           132.0          0.007             0.0                 0.008   \n",
+              "\n",
+              "   light_decelerations  severe_decelerations  prolongued_decelerations  \\\n",
+              "0                0.000                   0.0                       0.0   \n",
+              "1                0.003                   0.0                       0.0   \n",
+              "2                0.003                   0.0                       0.0   \n",
+              "3                0.003                   0.0                       0.0   \n",
+              "4                0.000                   0.0                       0.0   \n",
+              "\n",
+              "   abnormal_short_term_variability  mean_value_of_short_term_variability  \\\n",
+              "0                             73.0                                   0.5   \n",
+              "1                             17.0                                   2.1   \n",
+              "2                             16.0                                   2.1   \n",
+              "3                             16.0                                   2.4   \n",
+              "4                             16.0                                   2.4   \n",
+              "\n",
+              "   percentage_of_time_with_abnormal_long_term_variability  ...  histogram_min  \\\n",
+              "0                                               43.0       ...           62.0   \n",
+              "1                                                0.0       ...           68.0   \n",
+              "2                                                0.0       ...           68.0   \n",
+              "3                                                0.0       ...           53.0   \n",
+              "4                                                0.0       ...           53.0   \n",
+              "\n",
+              "   histogram_max  histogram_number_of_peaks  histogram_number_of_zeroes  \\\n",
+              "0          126.0                        2.0                         0.0   \n",
+              "1          198.0                        6.0                         1.0   \n",
+              "2          198.0                        5.0                         1.0   \n",
+              "3          170.0                       11.0                         0.0   \n",
+              "4          170.0                        9.0                         0.0   \n",
+              "\n",
+              "   histogram_mode  histogram_mean  histogram_median  histogram_variance  \\\n",
+              "0           120.0           137.0             121.0                73.0   \n",
+              "1           141.0           136.0             140.0                12.0   \n",
+              "2           141.0           135.0             138.0                13.0   \n",
+              "3           137.0           134.0             137.0                13.0   \n",
+              "4           137.0           136.0             138.0                11.0   \n",
+              "\n",
+              "   histogram_tendency  fetal_health  \n",
+              "0                 1.0           2.0  \n",
+              "1                 0.0           1.0  \n",
+              "2                 0.0           1.0  \n",
+              "3                 1.0           1.0  \n",
+              "4                 1.0           1.0  \n",
+              "\n",
+              "[5 rows x 22 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-c70e5233-7354-4a13-a9a3-422c1abf3ad9\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>baseline value</th>\n",
+              "      <th>accelerations</th>\n",
+              "      <th>fetal_movement</th>\n",
+              "      <th>uterine_contractions</th>\n",
+              "      <th>light_decelerations</th>\n",
+              "      <th>severe_decelerations</th>\n",
+              "      <th>prolongued_decelerations</th>\n",
+              "      <th>abnormal_short_term_variability</th>\n",
+              "      <th>mean_value_of_short_term_variability</th>\n",
+              "      <th>percentage_of_time_with_abnormal_long_term_variability</th>\n",
+              "      <th>...</th>\n",
+              "      <th>histogram_min</th>\n",
+              "      <th>histogram_max</th>\n",
+              "      <th>histogram_number_of_peaks</th>\n",
+              "      <th>histogram_number_of_zeroes</th>\n",
+              "      <th>histogram_mode</th>\n",
+              "      <th>histogram_mean</th>\n",
+              "      <th>histogram_median</th>\n",
+              "      <th>histogram_variance</th>\n",
+              "      <th>histogram_tendency</th>\n",
+              "      <th>fetal_health</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>120.0</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>73.0</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>43.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>62.0</td>\n",
+              "      <td>126.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>121.0</td>\n",
+              "      <td>73.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>132.0</td>\n",
+              "      <td>0.006</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.006</td>\n",
+              "      <td>0.003</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>17.0</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>68.0</td>\n",
+              "      <td>198.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>141.0</td>\n",
+              "      <td>136.0</td>\n",
+              "      <td>140.0</td>\n",
+              "      <td>12.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>133.0</td>\n",
+              "      <td>0.003</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.008</td>\n",
+              "      <td>0.003</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>16.0</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>68.0</td>\n",
+              "      <td>198.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>141.0</td>\n",
+              "      <td>135.0</td>\n",
+              "      <td>138.0</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>134.0</td>\n",
+              "      <td>0.003</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.008</td>\n",
+              "      <td>0.003</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>16.0</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>53.0</td>\n",
+              "      <td>170.0</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>134.0</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>132.0</td>\n",
+              "      <td>0.007</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.008</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>16.0</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>53.0</td>\n",
+              "      <td>170.0</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>136.0</td>\n",
+              "      <td>138.0</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 22 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c70e5233-7354-4a13-a9a3-422c1abf3ad9')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-c70e5233-7354-4a13-a9a3-422c1abf3ad9 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-c70e5233-7354-4a13-a9a3-422c1abf3ad9');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: Total number of columns (22) exceeds max_columns (20) limiting to first (20) columns.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Nova secção"
+      ],
+      "metadata": {
+        "id": "1148o2roqaUb"
+      }
     }
   ]
 }
